# treza

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: build.yml  ci.yml
docs/: HOW_IT_WORKS.md  SIGNING.md  USER_GUIDE.md  architecture.mmd  pipeline.mmd
packaging/: treza.spec  treza_launcher.py
packaging/linux/: 51-trezor.rules
packaging/windows/: treza.iss
signet/: __init__.py  __main__.py
signet/agent/: device.py  identities.py  manager.py  ui_bridge.py
spike/: check_symbols.py  requirements.lock.txt  spike_inprocess.py
tests/: agent_protocol.py  test_coupling.py  test_device.py  test_gui_smoke.py  test_hardware_trezor.py  test_identities.py  test_manager_fakedevice.py
treza/: __init__.py  __main__.py
treza/agent/: __init__.py  agentclient.py  device.py  identities.py  manager.py  ui_bridge.py
treza/gui/: __init__.py  add_dialog.py  app.py  controller.py  icons.py  main_window.py  onboarding.py  theme.py  tray.py
