[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "treza-ssh"
version = "0.1.0.dev0"
description = "Cross-platform desktop GUI to use a Trezor hardware device as an SSH key."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LGPL-3.0-or-later" }
authors = [{ name = "Treza contributors" }]
keywords = ["trezor", "ssh", "ssh-agent", "hardware-wallet", "gui"]

# Pinned to the exact versions validated in the Milestone 0 spike.
# libagent internals are not a stable public API; the coupling test
# (tests/test_coupling.py) guards against silent upstream drift.
dependencies = [
    "trezor_agent==0.13.0",
    "libagent==0.16.1",
    "trezor[hidapi]==0.20.1",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
treza = "treza.__main__:main"

[tool.setuptools]
license-files = ["COPYING", "COPYING.LESSER"]

[tool.setuptools.packages.find]
include = ["treza*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Hardware tests are opt-in: run with `pytest -m hardware` and a device attached.
markers = [
    "hardware: requires a physically connected Trezor device",
]
addopts = "-m 'not hardware'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
# libagent / trezorlib ship without type stubs.
[[tool.mypy.overrides]]
module = ["libagent.*", "trezorlib.*"]
ignore_missing_imports = true
